--- a/style/textual_style.css
+++ b/style/textual_style.css
@@ -8,15 +8,15 @@
 
 /* Style des paragraphes */
 .texte {
-	font-family: "Lucida Console", Monaco, monospace;
+	font-family: Tahoma, Geneva, sans-serif;
 	line-height: 1.3;
 	padding-bottom: 30px;
 	padding-top: -15px;
-	font-size: 1.2em;
+	font-size: 1.3em;
 }
 
 .sante {
-	font-family: Verdana, Geneva, sans-serif;
+	font-family: "Times New Roman", Times, serif;
 	font-size: 1.2em;
 	font-style: italic;
 	line-height: 0.9;
@@ -24,7 +24,7 @@
 }
 
 .choix {
-	font-family: "Courier New", Courier, monospace;
+	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 	font-size: 1.2em;
 	cursor: pointer;
 }
