--- a/style/textual_style.css
+++ b/style/textual_style.css
@@ -1,9 +1,15 @@
+/*
 .centre {
 	text-align: center;
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+}
+*/
+
+.centre {
+	padding: 5%;
 }
 
 /* Style des paragraphes */
